src/objects/Gumutindo_CKW__c.object
<CustomObject>
    <fields>
        <fullName>Gumutindo_Field_Officer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gumutindo Field Officer</label>
        <referenceTo>Gumutindo_Field_Officer__c</referenceTo>
        <relationshipLabel>Gumutindo CKWs</relationshipLabel>
        <relationshipName>Gumutindo_CKWs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Gumutindo_Primary_Society__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gumutindo Primary Society</label>
        <referenceTo>Gumutindo_Primary_Society__c</referenceTo>
        <relationshipLabel>Gumutindo CKWs</relationshipLabel>
        <relationshipName>Gumutindo_CKWs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Person</label>
        <referenceTo>Person__c</referenceTo>
        <relationshipLabel>Gumutindo CKWs</relationshipLabel>
        <relationshipName>Gumutindo_CKWs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Gumutindo CKW</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>GCKW-{0000}</displayFormat>
        <label>Gumutindo CKW Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gumutindo CKWs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>